added hyperlink text

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       Copyright &copy 2021
       <a class="footer-link" href="https://github.com/VincentZ-42" target="_blank">Vincent Zhao</a> | Code: 
       <a href="https://github.com/VincentZ-42/Library_BookTracker" target="_blank">
-          <i class="fab fa-github"></i>
+          Github <i class="fab fa-github"></i>
       </a>
     </footer>
-    
+
   </body>
 </html>
