--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <link rel='stylesheet' href='style.css' />
     <link rel="icon" href="github-icon.png" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="http://kit.fontawesome.com/9cc33f034d.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
   </head>
